--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,28 @@
 .htaccess
 wp-config.php
+wp-content/admin/
 wp-content/uploads/
 wp-content/blogs.dir/
 wp-content/upgrade/
 wp-content/backup-db/
-wp-content/advanced-cache.php
+wp-includes/
+wp-admin/
+wp-content/advanced-cache.ph
+p
 wp-content/wp-cache-config.php
 sitemap.xml
 *.log
 wp-content/cache/
 wp-content/backups/
 sitemap.xml.gz
+index.php
+license.txt
+
+readme.html
+wp-activate.php
+wp-login.php
+wp-mail.php
+wp-settings.php
+wp-signup.php
+wp-trackback.php
+xmlrpc.php
